# stock

./: .gitignore  README.md  generate_analysis_pdf.py  generate_analysis_pdf_cn.py  generate_html_pdf.py  generate_pdf_final.py  research_semiconductor_tech.py  半导体产业链分析_仪表盘.html  半导体产业链深度分析_20260701.md
daily_task/: daily-portfolio-check.md  daily_portfolio_check.py  run_tradingagents.py
data-sources/: DATA_SOURCE_GUIDE.md  install_a_stock_data.sh
evolve/: CLAUDE.md  state.json  (+1 more)
mystrategy/: README.md  pyproject.toml
mystrategy/mystrategy/: __init__.py  config.py
mystrategy/mystrategy/agents/: __init__.py
mystrategy/mystrategy/backtest/: __init__.py  broker.py  engine.py
mystrategy/mystrategy/cli/: __init__.py  main.py
mystrategy/mystrategy/data/: __init__.py  cache.py  router.py
mystrategy/mystrategy/data/markets/: __init__.py  a_stock.py  hk_stock.py  us_stock.py
mystrategy/mystrategy/factors/: __init__.py  base.py  capital_flow.py  fundamental.py  industry.py  quality.py  regime.py  registry.py  sentiment.py  technical.py  valuation.py
mystrategy/mystrategy/kol/: __init__.py
mystrategy/mystrategy/portfolio/: __init__.py
mystrategy/mystrategy/research/: __init__.py  checklist.py  quality_screen.py  thesis.py
mystrategy/mystrategy/signals/: __init__.py  base.py  candlestick.py  volume_price.py
mystrategy/mystrategy/strategies/: __init__.py  base.py  mean_reversion.py  momentum.py  registry.py  trend.py  volume_price_strategy.py
project/volume-price-detector/: CLAUDE.md  pyproject.toml
project/volume-price-detector/tests/: __init__.py  test_engine.py
project/volume-price-detector/volume_price_detector/: __init__.py  __main__.py  cli.py  data.py  engine.py  indicators.py  models.py  reporter.py
(+79 files in other folders)
